// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`MfaSection rendering should render nothing when MFA is not available 1`] = `""`;

exports[`MfaSection rendering when section is collapsed and MFA is active 1`] = `
<SettingItemMin
  describe={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="Active"
      id="user.settings.security.active"
    />
  }
  section="mfa"
  title={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="Multi-factor Authentication"
      id="user.settings.mfa.title"
    />
  }
  updateSection={[MockFunction]}
/>
`;

exports[`MfaSection rendering when section is collapsed and MFA is not active 1`] = `
<SettingItemMin
  describe={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="Inactive"
      id="user.settings.security.inactive"
    />
  }
  section="mfa"
  title={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="Multi-factor Authentication"
      id="user.settings.mfa.title"
    />
  }
  updateSection={[MockFunction]}
/>
`;

exports[`MfaSection rendering when section is expanded and MFA is active and enforced 1`] = `
<Memo(SettingItemMax)
  extraInfo={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="Multi-factor authentication is required on this server. Resetting is only recommended when you need to switch code generation to a new mobile device. You will be required to set it up again immediately."
      id="user.settings.mfa.requiredHelp"
    />
  }
  inputs={
    <div
      className="pt-2"
    >
      <a
        className="btn btn-primary"
        href="#"
        onClick={[Function]}
      >
        <Memo(MemoizedFormattedMessage)
          defaultMessage="Reset MFA on Account"
          id="user.settings.mfa.reset"
        />
      </a>
      <br />
    </div>
  }
  serverError={null}
  title={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="Multi-factor Authentication"
      id="user.settings.mfa.title"
    />
  }
  updateSection={[MockFunction]}
/>
`;

exports[`MfaSection rendering when section is expanded and MFA is active but not enforced 1`] = `
<Memo(SettingItemMax)
  extraInfo={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="Removing multi-factor authentication means you will no longer require a phone-based passcode to sign-in to your account."
      id="user.settings.mfa.removeHelp"
    />
  }
  inputs={
    <div
      className="pt-2"
    >
      <a
        className="btn btn-primary"
        href="#"
        onClick={[Function]}
      >
        <Memo(MemoizedFormattedMessage)
          defaultMessage="Remove MFA from Account"
          id="user.settings.mfa.remove"
        />
      </a>
      <br />
    </div>
  }
  serverError={null}
  title={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="Multi-factor Authentication"
      id="user.settings.mfa.title"
    />
  }
  updateSection={[MockFunction]}
/>
`;

exports[`MfaSection rendering when section is expanded and MFA is not active 1`] = `
<Memo(SettingItemMax)
  extraInfo={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="Adding multi-factor authentication will make your account more secure by requiring a code from your mobile phone each time you sign in."
      id="user.settings.mfa.addHelp"
    />
  }
  inputs={
    <div
      className="pt-2"
    >
      <a
        className="btn btn-primary"
        href="#"
        onClick={[Function]}
      >
        <Memo(MemoizedFormattedMessage)
          defaultMessage="Add MFA to Account"
          id="user.settings.mfa.add"
        />
      </a>
      <br />
    </div>
  }
  serverError={null}
  title={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="Multi-factor Authentication"
      id="user.settings.mfa.title"
    />
  }
  updateSection={[MockFunction]}
/>
`;

exports[`MfaSection rendering when section is expanded with a server error 1`] = `
<Memo(SettingItemMax)
  extraInfo={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="Adding multi-factor authentication will make your account more secure by requiring a code from your mobile phone each time you sign in."
      id="user.settings.mfa.addHelp"
    />
  }
  inputs={
    <div
      className="pt-2"
    >
      <a
        className="btn btn-primary"
        href="#"
        onClick={[Function]}
      >
        <Memo(MemoizedFormattedMessage)
          defaultMessage="Add MFA to Account"
          id="user.settings.mfa.add"
        />
      </a>
      <br />
    </div>
  }
  serverError="An error has occurred"
  title={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="Multi-factor Authentication"
      id="user.settings.mfa.title"
    />
  }
  updateSection={[MockFunction]}
/>
`;
